

  o better Gappa output: support for sqrt, for negative constants

version 0.63, Dec 21, 2010
==========================

  o first public release. See release notes in manual