@@ -56,7 +56,7 @@
 \vfill
 
 \begin{LARGE}
-  Version \whyversion{}, December 2010
+  Version \whyversion{}, February 2011
 \end{LARGE}
 
 \vfill
@@ -80,7 +80,7 @@ $^2$ INRIA Saclay - \^Ile-de-France, ProVal, Orsay, F-91893
 
 \bigskip
 
-  \textcopyright 2010 Univ Paris-Sud, CNRS, INRIA
+  \textcopyright 2010-2011 Univ Paris-Sud, CNRS, INRIA
 
   This work has been partly supported by the `U3CAT' national ANR project
   (ANR-08-SEGI-021-08, \url{http://frama-c.cea.fr/u3cat}) and by the
@@ -134,7 +134,26 @@ Lescuyer, Sim\~ao Melo de Sousa, Asma Tafat.
 
 \section*{Release notes}
 
-\paragraph{Version 0.63}
+\subsection*{Version 0.6?}
+
+\paragraph{new features}
+
+\begin{itemize}
+\item 
+\item better Gappa output: support for sqrt, for negative constants
+\end{itemize}
+
+\paragraph{bug fixes}
+
+\begin{itemize}
+\item Fixed local installation
+  \begin{itemize}
+  \item executable names are now identical to when they are installed
+  \end{itemize}
+\item IDE: source file names are stored as paths relative to the database
+\end{itemize}
+
+\subsection*{Version 0.63}
 First public release. The main new features with respect to Why 2.xx
 are the following.
 \begin{enumerate}
