@@ -2,7 +2,7 @@ theory HelloProof "My very first Why3 theory"
 
   goal G1 : true
 
-  goal G2 : (true -> false) and (true or false)
+  goal G2 : (false -> false) and (true or false)
 
   use import int.Int
 
