@@ -120,14 +120,41 @@ theory TestRealize
 
   type t
 
-  logic f t : t
-
   logic p t t
 
-  axiom P_sym: forall x y:t. p x y <-> p y x
+  axiom P_arefl: forall x:t. not (p x x)
+
+(*
+  axiom P_total: forall x y:t. p x y or p y x or x=y
+
+  logic f t : t
 
   axiom A : forall x:t. p (f x) x
 
-  lemma B : forall x:t. p x (f x)
+  lemma B : forall x:t. not (p x (f x))
+
+*)
 
 end
+
+theory TestRealizeUse
+
+(*  use import int.Int *)
+
+  use import TestRealize
+
+  logic q t : t
+
+  axiom C : forall x:t. p (q x) x 
+
+end
+
+theory TestInline 
+
+  use import int.Int 
+
+  logic p (x:int) (y:int) = x <= 3 and y <= 7
+
+  goal G : p 4 4
+
+end    
