@@ -1,6 +1,10 @@
 
-
-  o better Gappa output: support for sqrt, for negative constants
+  o [IDE] source file names are stored in database as relative paths
+    to the database, so that databases are now easier to move from a
+    machine to another (e.g when they are stored in source control
+    repositories)
+  o better Gappa output: support for sqrt, for
+    negative constants
 
 version 0.63, Dec 21, 2010
 ==========================
